[package]
name = "wasm_vdom"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
  'HtmlElement',
  'ElementCreationOptions',
  'DocumentFragment',
  'Comment',
]

[dependencies.js-sys]
version = "0.3.64"
